--- a/Project Development Phase/Sprint 4/Retail Store Web App/index.html
+++ b/Project Development Phase/Sprint 4/Retail Store Web App/index.html
@@ -27,12 +27,7 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: Techie - v4.9.1
-  * Template URL: https://bootstrapmade.com/techie-free-skin-bootstrap-3/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
+  
 </head>
 
 <body>
@@ -67,7 +62,7 @@
     <div class="container-fluid" data-aos="fade-up">
       <div class="row justify-content-center">
         <div class="col-xl-5 col-lg-6 pt-3 pt-lg-0 order-2 order-lg-1 d-flex flex-column justify-content-center">
-          <h1>Bettter Business Decisions</h1>
+          <h1>Better Business Decisions</h1>
           
           <div><a href="#about" class="btn-get-started scrollto">Get Started</a></div>
         </div>
